--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,37 @@
 
 .card-container {
   margin: 20px;
-  padding: 10px;
-  background-color: white;
+  background-color: transparent;
   width: 200px;
   height: 250px;
+  perspective: 1000px;
+}
+
+.flip {
+  transform: rotateY(180deg);
+}
+
+.flip-card-inner {
+  background-color: white;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
   border-radius: 5%;
   border: 1px solid black;
   box-shadow: 1px 1px 3px rgb(77, 77, 77);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
 }
