--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 .cards-container {
   padding: 20px;
   width: 50vw;
-  max-height: 80vh;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -9,10 +8,9 @@
 }
 
 .card-container {
-  margin: 20px;
   background-color: transparent;
-  width: 100px;
-  height: 150px;
+  width: 20%;
+  height: 20vh;
   perspective: 1000px;
 }
 
@@ -43,4 +41,26 @@
 
 .flip-card-back {
   transform: rotateY(180deg);
+}
+
+.icon,
+.card-content {
+  height: 100%;
+  display: flex;
+  font-size: 0.7rem;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 800px) {
+  .cards-container {
+    width: 85vw;
+  }
+
+  .card-container {
+    padding: 2px 4px;
+
+    width: 20%;
+    height: 15vh;
+  }
 }
