--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,13 @@
 .flip-card-back {
   transform: rotateY(180deg);
 }
+.covered {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
 
 .icon,
 .card-content {
@@ -65,6 +72,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.card-content img {
+  width: 40%;
+  max-height: 80%;
 }
 
 .icon img {
