--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.6s;
+  transition: transform 0.5s;
   transform-style: preserve-3d;
   border-radius: 5%;
   border: 1px solid black;
@@ -191,5 +191,9 @@ button:hover {
   .card-container {
     padding: 5px;
     width: 20%;
+  }
+
+  .modal-content {
+    width: auto;
   }
 }
